--- a/BeeldHerkening1/BeeldHerkening1.csproj
+++ b/BeeldHerkening1/BeeldHerkening1.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BeeldHerkening1ML.Model\BeeldHerkening1ML.Model.csproj" />
+  </ItemGroup>
+
 </Project>
